fix: remove unused method
